@@ -1,27 +1,40 @@
 package com.example.demo.security;
 
-import org.springframework.security.core.*;
+import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
-import java.util.*;
+
+import java.util.Collection;
+import java.util.Collections;
 
 public class UserPrincipal implements UserDetails {
 
-    private final String username;
+    private Long id;
+    private String username;
 
-    public UserPrincipal(String username) {
+    public UserPrincipal(Long id, String username) {
+        this.id = id;
         this.username = username;
+    }
+
+    // ✅ REQUIRED BY TEST
+    public Long getId() {
+        return id;
     }
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return List.of();
+        return Collections.emptyList();
     }
 
     @Override
-    public String getPassword() { return null; }
+    public String getPassword() {
+        return null;
+    }
 
     @Override
-    public String getUsername() { return username; }
+    public String getUsername() {
+        return username;
+    }
 
     @Override
     public boolean isAccountNonExpired() { return true; }
